fix button overflow and h1 line

--- a/_sass/elevate_theme/_base.scss
+++ b/_sass/elevate_theme/_base.scss
@@ -152,6 +152,10 @@ a {
         width: 250px;
         height: 53px;
         line-height: 53px;
+
+        @media screen and (max-width: 450px) {
+            line-height: 21px;
+        }
     }
 
     &.bordered {
